# playground-codex

./: .env  .env.sample  .gitignore  Dockerfile  README-docker.md  README.md  pyproject.toml  requirements.txt
app/: main.py
tests/: test_api.py
