[project]
name = "playground-codex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "tb-rest-client>=4.3",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]
